# Tristero-Solana

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
libs/oapp/: Cargo.toml
programs/tristero/: Cargo.toml
programs/tristero/src/: error.rs  events.rs  instructions.rs  lib.rs  msg_codec.rs  myutils.rs  state.rs  utils.rs
programs/tristero/src/instructions/: admin_panel.rs  cancel_match.rs  challenge.rs  create_match.rs  init_nonce.rs  init_oft.rs  init_receive_library.rs  init_send_library.rs  lz_receive.rs  lz_receive_types.rs  mod.rs  oracle_instruction.rs  place_order.rs  register_tristero_oapp.rs  send_stored.rs  tregister_oapp.rs  tristero_init_send_library.rs  tristero_send.rs  user.rs  user_instruction.rs
programs/tristero/src/instructions/admin_panel/: create_match.rs  initialize.rs  register_tristero_oapp.rs  send_stored.rs  update.rs
programs/tristero/src/instructions/oracle_instruction/: lz_receive.rs  lz_receive_types.rs
programs/tristero/src/instructions/tristero_oapp/: register_tristero_oapp.rs  tristero_send.rs
programs/tristero/src/instructions/user/: cancel_match.rs  create_match.rs  create_user.rs  swap_token.rs  update_user.rs
programs/tristero/src/instructions/user_instruction/: cancel_order.rs  challenge.rs  confirm_match.rs  create_match.rs  execute_match.rs  finish_challenge.rs  init_oft.rs  lz_receive.rs  lz_receive_types.rs  place_order.rs  register_tristero_oapp.rs  send_stored.rs  (+2 more)
programs/tristero/src/state/: admin_panel.rs  mod.rs  order.rs  receipt.rs  trade_match.rs  user.rs
(+171 files in other folders)
