[package]
name = "oapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", 'endpoint/idl-build']

[dependencies]
anchor-lang = { version = "0.29.0", features = ["event-cpi"] }
endpoint = { path = "../../programs/endpoint", features = ["cpi"]}