[package]
name = "tristero"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tristero"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["event-cpi", "init-if-needed"] }
solana-program = "=1.17.31"
solana-helper = { path = "../../solana-helper" }
cpi-helper = { path = "../../libs/cpi-helper" }
messagelib-interface = { path = "../messagelib-interface", features = ["cpi"] }
utils = { path = "../../libs/utils" }
endpoint = { path = "../../programs/endpoint", features = ["cpi"]}